﻿svs 17.04.2014 11:00:21 +0400 - build 3868

1. GUID`ы

    DisconnectDriveId           = {A1BDBEB1-2911-41FF-BC08-EEBC44040B50}  --> Dlg.Id
    Диалог "Отключение сетевого устройства" (Del на сетевом диске в мен выбора дисков).

    SUBSTDisconnectDriveId      = {75554EEB-A3A7-45FD-9795-4A85887A75A0}  --> Dlg.Id
    Диалог "Отключение SUBST-диска"

    VHDDisconnectDriveId        = {629A8CA6-25C6-498C-B3DD-0E18D1CC0BCD}  --> Dlg.Id
    Диалог "Отключение VHD-диска"

    ChangeDriveModeId           = {F87F9351-6A80-4872-BEEE-96EF80C809FB}  --> Dlg.Id
    Диалог "Настройка меню выбора диска"


drkns 15.04.2014 22:31:59 +0200 - build 3867

1. В 3857 немного погнулся переход по +/- во вьювере.

svs 15.04.2014 12:37:20 +0400 - build 3866

1. Mantis#0002647: DM_SETFOCUS работает неправильно в присутствии элемента с DIF_NOFOCUS
    Перед сменой фокуса принудительно очистим флаг DIF_FOCUS у всех элементов.

2. Mantis#0002608: функция Editor: не всегда учитывается что заданный файл уже может быть загружен

    Если файл уже открыт, то повторное открытие в модальном режиме сопровождается сообщением 
    "already loaded. How to open this file?" и две кнопки "{ New instance }" и "[ Cancel ]".
    В АПИ: из режимов EF_OPENMODE_* поддерживать только EF_OPENMODE_QUERY, EF_OPENMODE_NEWIFOPEN и 
    EF_OPENMODE_BREAKIFOPEN (т.е. те самые кнопки "New instance" и "Cancel").

    (пока частичное решение)

3. GUID`ы
    EditorReloadModalId         = {D6F557E8-7E89-4895-BD75-4D3F2C30E382}  --> Dlg.Id
    Редактор. Диалог-предупреждение переоткрытия открытого файла в модальном редакторе 
    (у не модальных - GUID==EditorReloadId)

    EditorCanNotEditDirectoryId = {CCA2C4D0-8705-4FA1-9B10-C9E3C8F37A65}  --> Dlg.Id
    Редактор. Предупреждение о попытке редактировать каталог

    EditorFileLongId            = {E3AFCD2D-BDE5-4E92-82B6-87C6A7B78FB6}  --> Dlg.Id