@@ -1,4 +1,8 @@
-﻿svs 17.04.2014 11:00:21 +0400 - build 3868
+﻿drkns 17.04.2014 19:24:04 +0200 - build 3869
+
+1. Более корректное определение UTF8 / UTF16LE / UTF16BE.
+
+svs 17.04.2014 11:00:21 +0400 - build 3868
 
 1. GUID`ы
 
